--- a/tasks/installations/postgresql.yml
+++ b/tasks/installations/postgresql.yml
@@ -1,1 +1,15 @@
 ---
+    # - name: Update APT cache
+    #   apt:
+    #     update_cache: yes
+
+    # - name: Install PostgreSQL
+    #   apt:
+    #     name: postgresql
+    #     state: present
+
+    # - name: Ensure PostgreSQL is running
+    #   service:
+    #     name: postgresql
+    #     state: started
+    #     enabled: yes
