--- a/tasks/installations/repmgr.yml
+++ b/tasks/installations/repmgr.yml
@@ -1,1 +1,43 @@
 ---
+---
+- name: Install repmgr
+  hosts: all
+  become: true
+  vars:
+    postgres_version: "14"
+  tasks:
+    - name: Update APT cache
+      apt:
+        update_cache: yes
+
+    - name: Install prerequisites
+      apt:
+        name: 
+          - gnupg
+          - wget
+        state: present
+
+    - name: Add PostgreSQL APT repository
+      shell: |
+        wget -qO - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
+        echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list
+      args:
+        warn: false
+
+    - name: Update APT cache after adding PostgreSQL repo
+      apt:
+        update_cache: yes
+
+    - name: Install PostgreSQL and repmgr
+      apt:
+        name:
+          - postgresql-{{ postgres_version }}
+          - postgresql-server-dev-{{ postgres_version }}
+          - repmgr-{{ postgres_version }}
+        state: present
+
+    - name: Ensure PostgreSQL is running
+      service:
+        name: postgresql
+        state: started
+        enabled: yes
