--- a/tasks/installations/init.yml
+++ b/tasks/installations/init.yml
@@ -1,5 +1,5 @@
 ---
   - include_tasks: ./docker.yml
-  - include_tasks: ./kubernetes.yml
-  - include_tasks: ./postgres.yml
-  - include_tasks: ./repmgr.yml
+  # - include_tasks: ./kubernetes.yml
+  # - include_tasks: ./postgres.yml
+  # - include_tasks: ./repmgr.yml
