--- a/playbook.yml
+++ b/playbook.yml
@@ -2,6 +2,7 @@
 - name: Ensure Docker is installed and running
   hosts: infrastructure
   become: yes
+  vars_files: secret.yml
   tasks:
     - include_tasks: tasks/installations/init.yml
     - include_tasks: tasks/others/init.yml
