--- a/tasks/installations/postgresql.yml
+++ b/tasks/installations/postgresql.yml
@@ -1,15 +1,50 @@
 ---
-    # - name: Update APT cache
-    #   apt:
-    #     update_cache: yes
+- name: Check if PostgreSQL 14 is installed
+  shell: dpkg -l | grep postgresql-14
+  register: postgres_installed
+  ignore_errors: true
 
-    # - name: Install PostgreSQL
-    #   apt:
-    #     name: postgresql
-    #     state: present
+- name: Install prerequisites if PostgreSQL is not installed
+  apt:
+    name:
+      - vim
+      - curl
+      - wget
+      - gpg
+      - gnupg2
+      - software-properties-common
+      - apt-transport-https
+      - lsb-release
+      - ca-certificates
+    state: present
+  when: postgres_installed.rc != 0
 
-    # - name: Ensure PostgreSQL is running
-    #   service:
-    #     name: postgresql
-    #     state: started
-    #     enabled: yes
+- name: Add PostgreSQL GPG key
+  command: >
+    bash -c "curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc |
+    gpg --dearmor -o /etc/apt/trusted.gpg.d/postgresql.gpg"
+  args:
+    creates: /etc/apt/trusted.gpg.d/postgresql.gpg
+  when: postgres_installed.rc != 0
+
+- name: Add PostgreSQL repository
+  shell: |
+    echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list
+  when: postgres_installed.rc != 0
+
+- name: Update apt cache
+  apt:
+    update_cache: yes
+  when: postgres_installed.rc != 0
+
+- name: Install PostgreSQL 14
+  apt:
+    name: postgresql-14
+    state: present
+  when: postgres_installed.rc != 0
+
+- name: Check PostgreSQL service status
+  systemd:
+    name: postgresql
+    state: started
+    enabled: yes
