--- a/tasks/installations/repmgr.yml
+++ b/tasks/installations/repmgr.yml
@@ -1,43 +1,54 @@
 ---
----
-- name: Install repmgr
-  hosts: all
-  become: true
-  vars:
-    postgres_version: "14"
-  tasks:
-    - name: Update APT cache
-      apt:
-        update_cache: yes
+- name: Check if repmgr is installed
+  shell: dpkg -l | grep repmgr
+  register: repmgr_installed
+  ignore_errors: true
 
-    - name: Install prerequisites
-      apt:
-        name: 
-          - gnupg
-          - wget
-        state: present
+- name: Install prerequisites if repmgr is not installed
+  apt:
+    name:
+      - flex
+      - libedit-dev
+      - libkrb5-dev
+      - libpam0g-dev
+      - libreadline-dev
+      - libselinux1-dev
+      - libssl-dev
+      - libxml2-dev
+      - libxslt1-dev
+      - build-essential
+      - postgresql-server-dev-14
+      - liblz4-dev 
+      - zlib1g-dev
+    state: present
+  when: repmgr_installed.rc != 0
 
-    - name: Add PostgreSQL APT repository
-      shell: |
-        wget -qO - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
-        echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list
-      args:
-        warn: false
+- name: Download repmgr source code
+  get_url:
+    url: https://repmgr.org/download/repmgr-5.3.3.tar.gz
+    dest: /tmp/repmgr-5.3.3.tar.gz
+  when: repmgr_installed.rc != 0
 
-    - name: Update APT cache after adding PostgreSQL repo
-      apt:
-        update_cache: yes
+- name: Extract repmgr source code
+  unarchive:
+    src: /tmp/repmgr-5.3.3.tar.gz
+    dest: /tmp/
+    remote_src: yes
+  when: repmgr_installed.rc != 0
 
-    - name: Install PostgreSQL and repmgr
-      apt:
-        name:
-          - postgresql-{{ postgres_version }}
-          - postgresql-server-dev-{{ postgres_version }}
-          - repmgr-{{ postgres_version }}
-        state: present
+- name: Configure and install repmgr
+  shell: |
+    cd /tmp/repmgr-5.3.3 &&
+    ./configure &&
+    make &&
+    make install
+  when: repmgr_installed.rc != 0
 
-    - name: Ensure PostgreSQL is running
-      service:
-        name: postgresql
-        state: started
-        enabled: yes
+- name: Check repmgr service status
+  shell: systemctl status repmgr
+  register: repmgr_status
+  ignore_errors: true
+
+- name: Debug repmgr service status
+  debug:
+    msg: "Repmgr service status: {{ repmgr_status.stdout }}"
