--- a/tasks/installations/kubernetes.yml
+++ b/tasks/installations/kubernetes.yml
@@ -12,22 +12,33 @@
           - gpg
         state: present
 
-    - name: Add Kubernetes GPG key
-      ansible.builtin.command:
-        cmd: curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.32/deb/Release.key | gpg --dearmor
-      register: gpg_output
+    - name: Ensure /etc/apt/sources.list.d directory exists
+      file:
+        path: /etc/apt/sources.list.d
+        state: directory
+        mode: '0755'
 
-    - name: Write Kubernetes GPG key to keyring
-      copy:
-        content: "{{ gpg_output.stdout }}"
-        dest: /etc/apt/keyrings/kubernetes-apt-keyring.gpg
-        owner: root
-        group: root
-        mode: '0644'
+    - name: Ensure /etc/apt/keyrings directory exists
+      file:
+        path: /etc/apt/keyrings
+        state: directory
+        mode: '0755'
+
+    - name: Download Kubernetes GPG key
+      get_url:
+        url: https://pkgs.k8s.io/core:/stable:/v1.32/deb/Release.key
+        dest: /tmp/Release.key
+
+    - name: Add Kubernetes GPG key to keyring
+      command:
+        cmd: gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg /tmp/Release.key
+      args:
+        creates: /etc/apt/keyrings/kubernetes-apt-keyring.gpg
 
     - name: Add Kubernetes repository
-      ansible.builtin.command:
-        cmd: echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.32/deb/ /' > /etc/apt/sources.list.d/kubernetes.list
+      copy:
+        dest: /etc/apt/sources.list.d/kubernetes.list
+        content: 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.32/deb/ /'
 
     - name: Update apt package list after adding Kubernetes repo
       apt:
@@ -42,16 +53,16 @@
         state: present
 
     - name: Hold kubelet, kubeadm, and kubectl to prevent upgrades
-      apt:
-        name:
-          - kubelet
-          - kubeadm
-          - kubectl
-        state: present
-        mark: hold
+      shell: |
+        apt-mark hold kubelet kubeadm kubectl
 
     - name: Enable and start kubelet service
       systemd:
         name: kubelet
         enabled: true
         state: started
+
+    - name: Clean up temporary files
+      file:
+        path: /tmp/Release.key
+        state: absent
