--- a/playbook.yml
+++ b/playbook.yml
@@ -1,8 +1,8 @@
 ---
 - name: Ensure Docker is installed and running
-  hosts: infrastructure
+  hosts: all
   become: yes
-  vars_files: secret.yml
   tasks:
     - include_tasks: tasks/installations/init.yml
-    - include_tasks: tasks/others/init.yml
+    - include_tasks: tasks/configurations/init.yml
+    # - include_tasks: tasks/others/init.yml
