--- a/tasks/configurations/init.yml
+++ b/tasks/configurations/init.yml
@@ -1,3 +1,3 @@
 ---
-  - include_tasks: ./repmgr_primary.yml
-  - include_tasks: ./repmgr_standby.yml
+  - include_tasks: ./repmgr/init.yml
+  - include_tasks: ./kubernetes/init.yml
