--- a/playbooks/repmgr/repmgr_primary.yml
+++ b/playbooks/repmgr/repmgr_primary.yml
@@ -90,10 +90,12 @@
         path: /etc/postgresql/12/main/pg_hba.conf
         insertafter: '^# IPv4 local connections:'
         block: |
-          # Allow repmgr user from the specified subnet
-          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet }}  md5
-          # Allow replication connections from the same subnet
-          host  replication       {{ repmgr_user }}  {{ network_subnet }}  md5
+          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_master }}  md5
+          host  replication       {{ repmgr_user }}  {{ network_subnet_master }}  md5
+          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker1 }}  md5
+          host  replication       {{ repmgr_user }}  {{ network_subnet_worker1 }}  md5
+          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5
+          host  replication       {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5
       notify: Reload PostgreSQL
 
     - name: Ensure /etc/repmgr/12 directory exists
