--- a/playbooks/vars/repmgr.yml
+++ b/playbooks/vars/repmgr.yml
@@ -3,7 +3,9 @@ repmgr_user: "repmgr"
 repmgr_password: "my_strong_password"
 repmgr_config_path: "/etc/repmgr/12/repmgr.conf"
 repmgr_service_name: "postgresql"
-network_subnet: "192.168.1.0/24"
+network_subnet_master: "{{ hostvars[groups['master_nodes'][0]].ansible_host }}/32"
+network_subnet_worker1: "{{ hostvars[groups['worker_nodes'][0]].ansible_host }}/32"
+network_subnet_worker2: "{{ hostvars[groups['worker_nodes'][1]].ansible_host }}/32"
 # We assume the master's IP is the first host in the master_nodes group
 master_host: "{{ hostvars[groups['master_nodes'][0]].ansible_host }}"
 # Set to true if you want to use --copy-external-config-files
