--- a/playbooks/repmgr/repmgr_standby.yml
+++ b/playbooks/repmgr/repmgr_standby.yml
@@ -71,6 +71,7 @@
         -f {{ repmgr_config_path }}
         standby clone
         {% if copy_ext_config | bool %} --copy-external-config-files {% endif %}
+        --force
 
     - name: Start PostgreSQL on standby
       systemd:
