--- a/playbooks/repmgr/repmgr_primary.yml
+++ b/playbooks/repmgr/repmgr_primary.yml
@@ -90,6 +90,10 @@
           host  replication       {{ repmgr_user }}  {{ network_subnet_worker1 }}  md5
           host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5
           host  replication       {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5
+          host  {{ repmgr_db }}   {{ repmgr_user }}  127.0.0.1/32  md5
+          host  replication       {{ repmgr_user }}  127.0.0.1/32  md5
+          host {{ repmgr_db }}    {{ repmgr_user }}  {{ master_private_ip }}/32   md5
+          host replication        {{ repmgr_user }}  {{ master_private_ip }}/32   md5
     - name: Reload PostgreSQL
       systemd:
         name: "{{ repmgr_service_name }}"
@@ -113,7 +117,7 @@
       vars:
         node_id: "{{ repmgr_node_id }}"    # from inventory
         node_name: "{{ repmgr_node_name }}" # from inventory
-        conninfo: "host={{ ansible_host }} dbname={{ repmgr_db }} user={{ repmgr_user }} password={{ repmgr_password }}"
+        conninfo: "host=127.0.0.1 dbname={{ repmgr_db }} user={{ repmgr_user }} password={{ repmgr_password }}"
         config_path_for_template: "{{ repmgr_config_path }}"
         service_name: "{{ repmgr_service_name }}"
 
