--- a/playbooks/tasks/installations/postgresql.yml
+++ b/playbooks/tasks/installations/postgresql.yml
@@ -31,9 +31,11 @@
   apt:
     update_cache: yes
 
-- name: Install PostgreSQL 12
+- name: Install PostgreSQL 12 and pglogical
   apt:
-    name: postgresql-12
+    name:
+      - postgresql-12
+      - postgresql-12-pglogical
     state: present
 
 - name: Ensure PostgreSQL service is started and enabled
