--- a/playbooks/repmgr/repmgr_primary.yml
+++ b/playbooks/repmgr/repmgr_primary.yml
@@ -73,7 +73,16 @@
         regexp: '^#?listen_addresses\s*=\s*.*'
         line: "listen_addresses = '*'"
         backup: yes
-      
+
+    - name: Configure PostgreSQL settings for pglogical
+      blockinfile:
+        path: /etc/postgresql/12/main/postgresql.conf
+        block: |
+          wal_level = 'logical'
+          max_replication_slots = 10
+          max_wal_senders = 10
+          track_commit_timestamp = on
+          
     - name: Restart PostgreSQL immediately
       systemd:
         name: "{{ repmgr_service_name }}"
@@ -94,6 +103,8 @@
           host  replication       {{ repmgr_user }}  127.0.0.1/32  md5
           host {{ repmgr_db }}    {{ repmgr_user }}  {{ master_private_ip }}/24   md5
           host replication        {{ repmgr_user }}  {{ master_private_ip }}/24   md5
+          host    replication     pglogical_user    0.0.0.0/0     md5
+          host    all             pglogical_user    0.0.0.0/0     md5
     - name: Reload PostgreSQL
       systemd:
         name: "{{ repmgr_service_name }}"
