--- a/main_playbook.yml
+++ b/main_playbook.yml
@@ -2,5 +2,8 @@
 - import_playbook: playbooks/tools_installation_playbook.yml
 - import_playbook: playbooks/repmgr/repmgr_primary.yml
 - import_playbook: playbooks/repmgr/repmgr_standby.yml
+- import_playbook: playbooks/pglogical/pglogical-master-config.yml
+- import_playbook: playbooks/pglogical/pglogical-workers-config.yml
+- import_playbook: playbooks/pglogical/pglogical-status-check.yml
 - import_playbook: playbooks/kubernetes/kube-config-master.yml
 - import_playbook: playbooks/kubernetes/kube-join-worker.yml
