--- a/playbooks/pglogical/pglogical-master-config.yml
+++ b/playbooks/pglogical/pglogical-master-config.yml
@@ -1,57 +1,25 @@
 - name: Create pglogical user and database
   hosts: master_nodes
   become: yes
-
   pre_tasks:
     - name: Create pglogical database
       community.postgresql.postgresql_db:
         name: pglogical_db
         state: present
       become_user: postgres
+      register: db_creation
 
-    - name: Ensure pglogical database exists
+    - name: Debug database creation output
+      debug:
+        var: db_creation
+
+    - name: Check if pglogical_db exists
       community.postgresql.postgresql_query:
         db: postgres
-        query: "SELECT 1 FROM pg_database WHERE datname = 'pglogical_db';"
+        query: "SELECT datname FROM pg_database WHERE datname = 'pglogical_db';"
       become_user: postgres
       register: db_check
-      failed_when: db_check.rowcount == 0
 
-    - name: Create pglogical user
-      community.postgresql.postgresql_user:
-        name: pglogical_user
-        password: "securepassword"
-        role_attr_flags: "LOGIN,REPLICATION"
-        state: present
-      become_user: postgres
-
-    - name: Ensure database is ready before granting privileges
-      pause:
-        seconds: 5  # Ensure the database is fully available
-
-    - name: Grant privileges on pglogical database
-      community.postgresql.postgresql_privs:
-        db: pglogical_db
-        objs: ALL
-        privs: "ALL"
-        type: database
-        roles: pglogical_user
-        state: present
-      become_user: postgres
-
-    - name: Create pglogical extension
-      community.postgresql.postgresql_query:
-        db: pglogical_db
-        query: "CREATE EXTENSION IF NOT EXISTS pglogical;"
-      become_user: postgres
-
-  tasks:
-    - name: Add primary node to pglogical
-      community.postgresql.postgresql_query:
-        db: pglogical_db
-        query: |
-          SELECT pglogical.create_node(
-            node_name := '{{ ansible_hostname }}',
-            dsn := 'host={{ ansible_host }} dbname=pglogical_db user=pglogical_user password=securepassword'
-          );
-      become_user: postgres
+    - name: Debug database existence check
+      debug:
+        var: db_check
