--- a/playbooks/pglogical/pglogical-master-config.yml
+++ b/playbooks/pglogical/pglogical-master-config.yml
@@ -3,23 +3,38 @@
   become: yes
   pre_tasks:
     - name: Create pglogical database
-      community.postgresql.postgresql_db:
-        name: pglogical_db
+      shell: sudo -u postgres psql -c "CREATE DATABASE pglogical_db;"
+      
+    - name: Create pglogical user
+      community.postgresql.postgresql_user:
+        name: pglogical_user
+        password: "securepassword"
+        role_attr_flags: "LOGIN,REPLICATION"
         state: present
       become_user: postgres
-      register: db_creation
-
-    - name: Debug database creation output
-      debug:
-        var: db_creation
-
-    - name: Check if pglogical_db exists
-      community.postgresql.postgresql_query:
-        db: postgres
-        query: "SELECT datname FROM pg_database WHERE datname = 'pglogical_db';"
+    - name: Grant privileges on pglogical database
+      community.postgresql.postgresql_privs:
+        db: pglogical_db
+        objs: ALL
+        privs: "ALL"
+        type: database
+        roles: pglogical_user
+        state: present
       become_user: postgres
-      register: db_check
-
-    - name: Debug database existence check
-      debug:
-        var: db_check
+      
+    - name: Create pglogical extension
+      community.postgresql.postgresql_query:
+        db: pglogical_db
+        query: "CREATE EXTENSION IF NOT EXISTS pglogical;"
+      become_user: postgres
+      
+  tasks:
+    - name: Add primary node to pglogical
+      community.postgresql.postgresql_query:
+        db: pglogical_db
+        query: |
+          SELECT pglogical.create_node(
+            node_name := '{{ ansible_hostname }}',
+            dsn := 'host={{ ansible_host }} dbname=pglogical_db user=pglogical_user password=postgres'
+          );
+      become_user: postgres
