--- a/playbooks/pglogical/pglogical-master-config.yml
+++ b/playbooks/pglogical/pglogical-master-config.yml
@@ -1,17 +1,26 @@
-- name: Create pglogical user and database
+- name: Ensure pglogical database exists
   hosts: master_nodes
   become: yes
-  pre_tasks:
-    - name: Create pglogical database
-      shell: sudo -u postgres psql -c "CREATE DATABASE pglogical_db;"
-      
-    - name: Create pglogical user
-      community.postgresql.postgresql_user:
-        name: pglogical_user
-        password: "securepassword"
-        role_attr_flags: "LOGIN,REPLICATION"
+  tasks:
+    - name: Check if pglogical_db exists
+      community.postgresql.postgresql_query:
+        db: postgres
+        query: "SELECT 1 FROM pg_database WHERE datname = 'pglogical_db';"
+      become_user: postgres
+      register: db_check
+      failed_when: db_check.rowcount > 1  # This should never be more than 1
+
+    - name: Debug database existence check
+      debug:
+        var: db_check
+
+    - name: Create pglogical database if not exists
+      community.postgresql.postgresql_db:
+        name: pglogical_db
         state: present
       become_user: postgres
+      when: db_check.rowcount == 0
+
     - name: Grant privileges on pglogical database
       community.postgresql.postgresql_privs:
         db: pglogical_db
@@ -20,21 +29,4 @@
         type: database
         roles: pglogical_user
         state: present
-      become_user: postgres
-      
-    - name: Create pglogical extension
-      community.postgresql.postgresql_query:
-        db: pglogical_db
-        query: "CREATE EXTENSION IF NOT EXISTS pglogical;"
-      become_user: postgres
-      
-  tasks:
-    - name: Add primary node to pglogical
-      community.postgresql.postgresql_query:
-        db: pglogical_db
-        query: |
-          SELECT pglogical.create_node(
-            node_name := '{{ ansible_hostname }}',
-            dsn := 'host={{ ansible_host }} dbname=pglogical_db user=pglogical_user password=postgres'
-          );
       become_user: postgres
