--- a/playbooks/pglogical/pglogical-master-config.yml
+++ b/playbooks/pglogical/pglogical-master-config.yml
@@ -8,11 +8,7 @@
         query: "SELECT 1 FROM pg_database WHERE datname = 'pglogical_db';"
       become_user: postgres
       register: db_check
-      failed_when: db_check.rowcount > 1  # This should never be more than 1
-
-    - name: Debug database existence check
-      debug:
-        var: db_check
+      failed_when: db_check.rowcount > 1
 
     - name: Create pglogical database if not exists
       community.postgresql.postgresql_db:
@@ -24,7 +20,6 @@
     - name: Grant privileges on pglogical database
       community.postgresql.postgresql_privs:
         db: pglogical_db
-        objs: ALL
         privs: "ALL"
         type: database
         roles: pglogical_user
