--- a/playbooks/tasks/installations/postgresql.yml
+++ b/playbooks/tasks/installations/postgresql.yml
@@ -11,6 +11,7 @@
       - apt-transport-https
       - lsb-release
       - ca-certificates
+      - python3-psycopg2
     state: present
     update_cache: yes
 
