--- a/playbooks/pglogical/pglogical-master-config.yml
+++ b/playbooks/pglogical/pglogical-master-config.yml
@@ -1,27 +1,56 @@
-- name: Ensure pglogical database exists
+- name: Create pglogical user and database
   hosts: master_nodes
   become: yes
-  tasks:
-    - name: Check if pglogical_db exists
+
+  pre_tasks:
+    - name: Create pglogical database
+      community.postgresql.postgresql_db:
+        name: pglogical_db
+        state: present
+      become_user: postgres
+
+    - name: Ensure pglogical database exists
       community.postgresql.postgresql_query:
         db: postgres
         query: "SELECT 1 FROM pg_database WHERE datname = 'pglogical_db';"
       become_user: postgres
       register: db_check
-      failed_when: db_check.rowcount > 1
+      failed_when: db_check.rowcount == 0
 
-    - name: Create pglogical database if not exists
-      community.postgresql.postgresql_db:
-        name: pglogical_db
+    - name: Create pglogical user
+      community.postgresql.postgresql_user:
+        name: pglogical_user
+        password: "securepassword"
+        role_attr_flags: "LOGIN,REPLICATION"
         state: present
       become_user: postgres
-      when: db_check.rowcount == 0
 
+    - name: Ensure database is ready before granting privileges
+      pause:
+        seconds: 5  # Ensure the database is fully available
+  tasks:
     - name: Grant privileges on pglogical database
       community.postgresql.postgresql_privs:
         db: pglogical_db
+        objs: ALL
         privs: "ALL"
         type: database
         roles: pglogical_user
         state: present
+      become_user: postgres
+
+    - name: Create pglogical extension
+      community.postgresql.postgresql_query:
+        db: pglogical_db
+        query: "CREATE EXTENSION IF NOT EXISTS pglogical;"
+      become_user: postgres
+      
+    - name: Add primary node to pglogical
+      community.postgresql.postgresql_query:
+        db: pglogical_db
+        query: |
+          SELECT pglogical.create_node(
+            node_name := '{{ ansible_hostname }}',
+            dsn := 'host={{ ansible_host }} dbname=pglogical_db user=pglogical_user password=securepassword'
+          );
       become_user: postgres
